Updated favicon Added animations on larger screens Stopped backstretch being called on smaller devices

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,11 +85,10 @@ textarea {
    ========================================================================== */
 
 html {
-    font: normal 112.5%/1.65 serif; /* base font size 18px with 1.65 line-height */
+    font: normal 112.5%/1.65 'Open Sans', sans-serif; /* base font size 18px with 1.65 line-height */
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
@@ -97,6 +96,7 @@ body {
     hyphens: auto;
     word-wrap: break-word;
     color: #444444;
+    overflow: hidden;
 }
 
 h1 {
@@ -109,6 +109,7 @@ h1 {
     line-height: 1;
     text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
     color: #222222;
+    background: transparent;
 }
 
 p {
@@ -116,11 +117,59 @@ p {
 }
 
 .text-content {
-    margin-left: 3%;
-    width: 20em;
+    margin: 0 3% 3%;
+    max-width: 25em;
     border-radius: 0.5em;
     background-color: rgba(240, 240, 240, 0.7);
     padding: 1em;
+}
+
+    .text-content p:last-of-type {
+        margin-bottom: 0; /* strip the last bottom margin so that it doesn't look odd */
+    }
+
+@media (min-width: 501px) {
+
+    h1 {
+        animation-duration: 3s;
+        animation-name: slidein;
+    }
+
+    .text-content {
+        animation-duration: 3s;
+        animation-name: slideDown;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        background: url(../images/jet-sky.jpg) no-repeat center center;
+        background-size: cover;
+    }
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%
+    }
+
+    to {
+        margin-left: 3%;
+        width: 100%;
+    }
+}
+
+@keyframes slideDown {
+    from {
+        margin-top: -100%;
+        height: 200%
+    }
+
+    to {
+        margin-top: 0%;
+        height: 100%;
+    }
 }
 
 /* ==========================================================================
